--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>{% block title %}Couch{% endblock %}</title>
+    <title>Couch</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='normalize.css') }}"/>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='skeleton.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='normalize.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='skeleton.css') }}">
 </head>
 <body>
-    {% block body %}
-    {% endblock %}
+{% block body %}
+{% endblock %}
 </body>
 </html>
