--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Couch Login{% endblock %}
 {% block body %}
-<form action="{{ url_for("login") }}" method="post">
-    <div class="six columns">
-        <label for="email_input">Email</label>
-        <input class="u-full-width" type="email" placeholder="you@couch.com" id="email_input">
-    </div>
-    <div class="six columns">
-        <label for="password_input">Password</label>
-        <input class="u-full-width" type="password" placeholder="********" id="password_input">
-    </div>
-    <input class="button-primary" type="submit" value="Submit">
-</form>
+    <h1>OAuth Demo</h1>
+    {% for message in get_flashed_messages() %}
+        <p><b>Error</b>: {{ message }}</p>
+    {% endfor %}
+    {% if current_user.is_authenticated() %}
+        <h2>Hi, {{ current_user.nickname }}!</h2>
+        <p><a href="{{ url_for('logout') }}">Logout</a></p>
+    {% else %}
+        <h2>I don't know you!</h2>
+        <p><a href ="{{ url_for('oauth_authorize') }}">Login with Rdio</a></p>
+    {% endif %}
 {% endblock %}
-
