--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,9 +7,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='normalize.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='skeleton.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='custom.css') }}">
 </head>
-<body>
 {% block body %}
 {% endblock %}
-</body>
 </html>
