--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home.css') }}">
+{% endblock %}
+
 {% block body %}
 <body>
     <div id="header_container">
@@ -7,36 +12,26 @@
                <ul>
                    <li class="active"><a href="#">Home</a></li>
                    <li><a href="#">About</a></li>
-                   <li class="middle"><img src="http://i.imgur.com/TVR5TQg.png" id="logo" /></li>
+                   <li class="middle"><img src="http://i.imgur.com/TVR5TQg.png" id="logo"/></li>
                    <li><a href="#">Contact</a></li>
                    <li><a href="#">Logout</a></li>
                </ul>
            </nav>
         </header>
     </div>
-    <div class="container">
+    <div class="container" id="groups_container">
         <table class="u-full-width">
           <thead>
             <tr>
-              <th>Name</th>
-              <th>Age</th>
-              <th>Sex</th>
-              <th>Location</th>
+              <th>Group Name</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Dave Gamache</td>
-              <td>26</td>
-              <td>Male</td>
-              <td>San Francisco</td>
-            </tr>
-            <tr>
-              <td>Dwayne Johnson</td>
-              <td>42</td>
-              <td>Male</td>
-              <td>Hayward</td>
-            </tr>
+          {% for group in current_user.groups %}
+              <tr>
+                <td>{{ group.name }}</td>
+              </tr>
+          {% endfor %}
           </tbody>
         </table>
     </div>
