--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='skeleton.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='custom.css') }}">
 </head>
+
+<!-- Handle message flashes -->
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
 {% block body %}
 {% endblock %}
 </html>
