Changed login page to have only the logo and about elements in the header

--- a/app/static/login.css
+++ b/app/static/login.css
@@ -1,3 +1,37 @@
+#header {
+    width: auto;
+    height: 200px;
+    border: none;
+	font-size: 1.4em;
+	margin: auto;
+	padding: 0;
+    text-transform: uppercase;
+    font-family: 'PetitaMediumRegular', Arial, sans-serif;
+    -webkit-font-smoothing: subpixel-antialiased;
+}
+
+#logo {
+	width: 203px;
+	height: 103px;
+	margin-left: 200px;
+    margin-top: 75px;
+    /* Transitions currently not implemented, worth thinking about later */
+	-webkit-transition: opacity 0.3s linear;
+	-moz-transition: opacity 0.3s linear;
+	-o-transition: opacity 0.3s linear;
+	transition: opacity 0.3s linear;
+	-webkit-transform: translateZ(0);
+}
+
+#about {
+    text-decoration: none;
+    margin-left: 865px;
+    margin-top: 152px;
+    letter-spacing: 0.3em;
+    position: absolute;
+    color: #000000;
+}
+
 #login_elements {}
 
 #rdio_logo {
