--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,15 +8,8 @@
 <body>
     <div id="header_container">
        <header id="header">
-           <nav>
-               <ul>
-                   <li class="active"><a href="#">Home</a></li>
-                   <li><a href="#">About</a></li>
-                   <li class="middle"><img src="http://i.imgur.com/TVR5TQg.png" id="logo" /></li>
-                   <li><a href="#">Contact</a></li>
-                   <li><a href="#">Logout</a></li>
-               </ul>
-           </nav>
+           <img src="http://i.imgur.com/TVR5TQg.png" id="logo" />
+           <a id="about" href="#">About</a>
         </header>
     </div>
 
