Added group to user checks on group page

--- a/app/templates/group.html
+++ b/app/templates/group.html
@@ -10,11 +10,11 @@
         <div class="row">
             <img class="two columns" src="http://i.imgur.com/TVR5TQg.png"/>
             <div class="eight columns"></div>
-            <div class="two columns">{{ group_id }}</div>
+            <div class="two columns">{{ group.id }}</div>
         </div>
         <div class="row">
             <div class="three columns u-pull-left">
-                {{ group_name}}
+                {{ group.name}}
             </div>
             <div class="three columns u-pull-right">b</div>
             <div class="u-full-width">c</div>
