--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,7 +29,7 @@
           <tbody>
           {% for group in current_user.groups %}
               <tr>
-                <td>{{ group.name }}</td>
+                <td><a href="{{ url_for('group', group_id=group.id) }}">{{ group.name }}</a></td>
               </tr>
           {% endfor %}
           </tbody>
