--- a/app/static/partials/home.html
+++ b/app/static/partials/home.html
@@ -1,3 +1,8 @@
 <div class="container">
-
+    <h3>Groups</h3>
+    <ul class="list-group">
+        <li class="list-group-item" ng-repeat="group in user.groups">
+            <a ui-sref="group({id:group.id})">{{ group.name }}</a>
+        </li>
+    </ul>
 </div>
