--- a/app/static/partials/group.html
+++ b/app/static/partials/group.html
@@ -1,3 +1,16 @@
+<!-- Custom styles for this template -->
+<link href="../custom_css/custom_group.css" rel="stylesheet">
+
 <div class="container">
     <div>Group</div>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+           <ul class="nav nav-sidebar">
+                <li ng-repeat="listener in listeners">{{ listener }}</li>
+            </ul>
+        </div>
+    </div>
 </div>
