--- a/app/static/partials/home.html
+++ b/app/static/partials/home.html
@@ -2,7 +2,7 @@
     <h3>{{ user.first_name }}</h3>
     <ul class="list-group">
         <li class="list-group-item" ng-repeat="group in user.groups">
-            <a ui-sref="group({id:group.id})">{{ group.name }}</a>
+            <a ui-sref="group({id:group.id, group:group.id})">{{ group.name }}</a>
         </li>
     </ul>
     <div class="input-group">
