Added m-search.js dependency

--- a/app/static/partials/group.html
+++ b/app/static/partials/group.html
@@ -1,5 +1,5 @@
 <!-- Custom styles for this template -->
-<link href="../custom_css/custom_group.css" rel="stylesheet">
+<link href="../css/custom_group.css" rel="stylesheet">
 
 <div class="container">
     <div id="search"></div>
@@ -15,5 +15,5 @@
     </div>
 </div>
 
-<script src="lib/metronomik-search/m-search.js"></script>
+<script src="js/metronomik-search/m-search.js"></script>
 
