--- a/app/static/partials/group.html
+++ b/app/static/partials/group.html
@@ -1,19 +1,80 @@
 <!-- Custom styles for this template -->
 <link href="../css/custom_group.css" rel="stylesheet">
-
-<div class="container">
-    <div id="search"></div>
-</div>
-
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-           <ul class="nav nav-sidebar">
-                <li ng-repeat="listener in listeners">{{ listener }}</li>
-            </ul>
+        <div class="col-md-2">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        Currently Listening
+                    </h3>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item" ng-repeat="listener in listeners">{{ listener['$value'] }}</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="input-group">
+                <input type="text" class="form-control" ng-model="search_text" placeholder="Search for...">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" ng-click="search(search_text)">
+                        Go!
+                    </button>
+                </span>
+            </div>
+            <br>
+            <div class="panel panel-default" ng-show="search_results.length">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        Tracks
+                    </h3>
+                </div>
+                <ul class="media list-group">
+                    <li class="list-group-item" ng-repeat="track in search_results">
+                        <div class="media-left">
+                            <img class="media-object" ng-src="{{ track.icon }}" width="64">
+                        </div>
+                        <div class="media-body media-middle">
+                            <h4 class="media-heading">
+                                {{ track.name }}
+                            </h4>
+                            <p>
+                                {{ track.artist }}
+                            </p>
+                        </div>
+                        <div class="media-right">
+                            <button class="btn btn-default" type="button" ng-click="add_to_playlist(track)">
+                                Add to playlist
+                            </button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        Playlist
+                    </h3>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item" ng-repeat="track in playlist">
+                        <div class="media-left">
+                            <img class="media-object" ng-src="{{ track.icon }}" width="64">
+                        </div>
+                        <div class="media-body media-middle">
+                            <h4 class="media-heading">
+                                {{ track.name }}
+                            </h4>
+                            <p>
+                                {{ track.artist }}
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
-
-<script src="js/metronomik-search/m-search.js"></script>
-
