--- a/app/static/partials/group.html
+++ b/app/static/partials/group.html
@@ -10,7 +10,9 @@
                     </h3>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item" ng-repeat="listener in listeners">{{ listener['$value'] }}</li>
+                    <li class="list-group-item" ng-repeat="listener in listeners">
+                        {{ listener.first_name }} {{ listener.last_name }}
+                    </li>
                 </ul>
             </div>
         </div>
