--- a/app/static/partials/home.html
+++ b/app/static/partials/home.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <h3>{{ user_first_name }}'s Groups</h3>
+    <h3>{{ current_user.first_name }}'s Groups</h3>
     <ul class="list-group">
         <li class="list-group-item" ng-repeat="group in current_user.groups">
-            <a ui-sref="group({id:group.id, group:group.id})">{{ group.name }}</a>
+            <a ui-sref="group({id:group.id})">{{ group.name }}</a>
         </li>
     </ul>
     <div class="input-group">
