added leave group functionality

--- a/app/static/partials/group.html
+++ b/app/static/partials/group.html
@@ -47,7 +47,7 @@
                                 </p>
                             </div>
                             <div class="media-right">
-                                <button class="btn btn-default" type="button" ng-click="add_to_playlist(track)">
+                                <button class="btn btn-default" type="button" ng-click="addToPlaylist(track)">
                                     Add to playlist
                                 </button>
                             </div>
