--- a/app/static/partials/home.html
+++ b/app/static/partials/home.html
@@ -2,13 +2,18 @@
     <h3>{{ current_user.first_name }}'s Groups</h3>
     <ul class="list-group">
         <li class="list-group-item" ng-repeat="group in current_user.groups">
-            <a ui-sref="group({id:group.id})">{{ group.name }}</a>
+            <div class="row">
+                <a ui-sref="group({id:group.id})">{{ group.name }}</a>
+                <button class="btn btn-default pull-right" type="button" ng-click="leaveGroup(group)">
+                    Leave Group
+                </button>
+            </div>
         </li>
     </ul>
     <div class="input-group">
-        <input ng-model="newGroupName" type="text" class="form-control" placeholder="Enter group name">
+        <input ng-model="new_group_name" type="text" class="form-control" placeholder="Enter group name">
         <span class="input-group-btn">
-            <button class="btn btn-default" ng-click="createNewGroup(newGroupName)">Create!</button>
+            <button class="btn btn-default" ng-click="createNewGroup(new_group_name)">Create!</button>
         </span>
     </div>
 </div>
